<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">
        <item android:id="@+id/menu_si_units"
            android:title="@string/si_units"
            android:checked="true"/>
        <item android:id="@+id/menu_imp_units"
            android:title="@string/imperial_units" />
    </group>

    <item
        android:id="@+id/menu_share"
        android:enabled="false"
        android:icon="@android:drawable/ic_menu_share"
        android:title="@string/share"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_save"
        android:enabled="false"
        android:icon="@android:drawable/ic_menu_save"
        android:title="@string/save"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_author"
        android:icon="@android:drawable/ic_menu_my_calendar"
        android:title="@string/author"
        app:showAsAction="ifRoom" />
</menu>