<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:padding="16dp"
        tools:context="pl.edu.pwr.mateusznowak.lab1.swim_lab1.ui.BmiCounterActivity">

        <TextView
            android:id="@+id/textView_Mass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/editText_Mass"
            android:layout_alignBottom="@+id/editText_Mass"
            android:layout_alignEnd="@+id/textView_Height"
            android:text="@string/mass"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editText_Mass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/editText_Height"
            android:hint="@string/your_mass_here"
            android:inputType="numberDecimal" />


        <TextView
            android:id="@+id/textView_Height"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView_Mass"
            android:layout_marginEnd="22dp"
            android:layout_marginTop="15dp"
            android:text="@string/height"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editText_Height"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/textView_Height"
            android:layout_toEndOf="@id/textView_Height"
            android:hint="@string/your_height_here"
            android:inputType="text|numberDecimal" />

        <Button
            android:id="@+id/button_countBmi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editText_Height"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="13dp"
            android:text="@string/count_bmi" />


        <TextView
            android:id="@+id/textView_YourBMI"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/button_countBmi"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="11dp"
            android:padding="20dp"
            android:text="@string/your_bmi"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView_BmiCondition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView_YourBMI"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="24dp"
            android:textAllCaps="true"
            android:textSize="24sp"
            android:textStyle="bold" />


    </RelativeLayout>
</ScrollView>